traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:21: error: expected class or object definition
def estPosFinale():Boolean = {
^Snake:50: error: Unmatched closing brace '}' ignored here
}
^